# OK_Cloud_Streamer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
NvidiaOVRSample/: README.txt  deploy_72hz.bat  deploy_90hz.bat
NvidiaOVRSample/src/: .gitignore
NvidiaOVRSample/src/app/: build.gradle
NvidiaOVRSample/src/app/src/main/src/: EGLHelper.cpp  main.cpp  main.h
client/NvidiaOVRSample/: deploy_120hz.bat  deploy_cloudxr_client_settings.bat
client/NvidiaOVRSample/src/: gradle.properties
client/OK_Cloud_Streamer_Client/android/: settings.gradle
client/OK_Cloud_Streamer_Client/android/app-ok-cloud-streamer-gles/: build.gradle
client/android/: settings.gradle
client/android/app/: CMakeLists.txt  build.gradle
client/android/app-ok-cloud-streamer-gles/: CMakeLists.txt  build.gradle
client/android/app-ok-cloud-streamer-gles/src/cpp/: OKAnalogAxis.cpp  OKCloudSession.h  OKConfig.cpp  OKController.cpp  OKDigitalButton.h  OKPlayerState.cpp  ok_defines.h
client/android/app/release/: output-metadata.json
client/android/app/src/: CMakeLists.txt
client/android/app/src/cpp/: CMakeLists.txt  OKCloudClient.cpp  OKCloudClient.h  OKCloudSession.cpp  OKConfig.cpp  OKPlayerState.h  ok_defines.h
client/android/app/src/cpp/jsoncpp/: CMakeLists.txt
client/config/: deploy_config.bat  deploy_config_alt.bat  ok_cloud_streamer_config.json
client/src/: gradle.properties
client/src/.github/workflows/: build.yaml
client/src/app/: build.gradle
client/src/app/src/main/: AndroidManifest.xml
client/src/app/src/main/jni/: Android.mk
client/src/cpp/: GLMPose.cpp  OKConfig.h
client/src/renderSessions/: GLMPose.h  HelloOpenXRSession.cpp  OKAnalogAxis.cpp  OKAnalogAxis.h  OKCloudClient.cpp  OKCloudClient.h  OKCloudSession.cpp  OKCloudSession.h  OKConfig.cpp  OKConfig.h  OKController.cpp  OKController.h  OKDigitalButton.cpp  OKDigitalButton.h  OKPlayerState.cpp  OKPlayerState.h  defines.h  ok_defines.h
(+8 files in other folders)
